# study-vis-app

./: .gitignore  README.md  manage.py  pyproject.toml  sample.config.yaml
notebooks/: check.ipynb
static/css/: style.css
studyvis/: asgi.py  settings.py  urls.py  wsgi.py
studyvisapp/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
studyvisapp/migrations/: 0001_initial.py  0002_auto_20210812_0433.py  0003_auto_20210812_0510.py  0004_auto_20210812_1428.py  0005_alter_timemodel_item.py  0006_auto_20210812_1607.py  0007_auto_20210813_1208.py  0008_auto_20210813_1210.py  0009_auto_20210813_1214.py
studyvisapp/templatetags/: poll_extras.py
templates/: base.html  create.html  delete.html  end.html  home.html  list.html  timer.html  update.html  vis.html
