[tool.poetry]
name = "inf"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.1"
jupyter = "^1.0.0"
jupyterlab = "^3.1.4"
matplotlib = "^3.4.2"
ipython = "^7.26.0"
pandas = "^1.3.1"
mypy = "^0.910"
flake8 = "^3.9.2"
black = "^21.7b0"
Flask = "^2.0.1"
Django = "^3.2.6"
plotly = "^5.1.0"
jpholiday = "^0.1.5"
python-dotenv = "^0.19.0"
omegaconf = "^2.1.0"
django-pandas = "^0.6.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
